# BB10-WebWorks-Framework

./: .csslintrc  .gitignore  .gitmodules  .jshintignore  .jshintrc  CMakeLists.txt  Jakefile  LICENSE  README  README.md  configure  configure.bat  dist.xml  licenses.txt  package.json  pom.xml  test-runner.default  test-runner.default.json
dependencies/bootstrap/: index.html  ui.html
dependencies/configure-qsk/: configure-qsk
dependencies/cpplint/: cpplint.py
dependencies/jasmine-node/: jasmine-node.js
dependencies/require/: require.js
dependencies/test-server/: .gitignore  README.md  app.js  job.js  package.json
dependencies/xui/: xui.js
device_bootstrap/: bootstriper.html
ext/: Makefile  meta.mk
ext-experimental/webviews/: client.js  context.js  index.js  manifest.json  webviews.js
ext-internal/automation/: client.js  index.js  manifest.json
ext-internal/pps/: client.js  index.js  manifest.json
ext/Payment/: CMakeLists.txt  client.js  index.js  manifest.json
ext/Payment/native/: payment_bps.cpp  payment_bps.hpp  payment_js.cpp  payment_js.hpp
ext/app/: appEvents.js  client.js  index.js  manifest.json
ext/bb.events/: client.js  device.js  index.js
ext/bb.fakeevents/: index.js
ext/bbm.platform/: BBMEvents.js  BBMJNEXT.js  client.js  index.js  manifest.json
ext/blackberry.app/: client.js  index.js  library.xml  navEvents.js  server.js
ext/blackberry.app.event/: client.js  index.js
ext/blackberry.connection/: client.js  connectionEvents.js  connectionJNEXT.js  index.js
ext/blackberry.connection/native/: CMakeLists.txt  configure-qsk  connection_bps.cpp  connection_bps.h  connection_bps.hpp  connection_js.cpp  connection_js.h  connection_js.hpp
ext/blackberry.connection/native/unitTests/: CMakeLists.txt  configure-qsk  test_main.cpp
ext/blackberry.event/: client.js  index.js  navEvents.js
ext/blackberry.example.event/: client.js  index.js
ext/blackberry.example.test/: client.js  index.js  server.js
ext/blackberry.identity/: client.js  index.js
ext/blackberry.invoke/: client.js  index.js  library.xml  pps.js
ext/blackberry.invoked/: client.js  index.js  invocationEvents.js
ext/blackberry.io/: client.js  index.js
ext/blackberry.io.filetransfer/: client.js  index.js
ext/blackberry.io.filetransfer/native/: CMakeLists.txt  filetransfer_curl.cpp  filetransfer_curl.hpp  filetransfer_js.cpp  filetransfer_js.hpp
ext/blackberry.io.filetransfer/native/unitTests/: CMakeLists.txt
ext/blackberry.push/: client.js  index.js
ext/blackberry.push/native/: CMakeLists.txt  push_js.cpp  push_js.hpp  push_ndk.cpp
ext/blackberry.push/native/unitTests/: CMakeLists.txt  test_main.cpp
ext/blackberry.system/: client.js  index.js  library.xml
ext/blackberry.system.event/: client.js  device.js  foo.js  index.js
ext/blackberry.ui.contextmenu/: actions.js  client.js  index.js
ext/blackberry.ui.dialog/: client.js  index.js
ext/box/: library.xml
ext/card/: client.js  index.js  manifest.json
ext/connection/: client.js  connectionEvents.js  connectionJNEXT.js  index.js  manifest.json
ext/connection/native/unitTests/: CMakeLists.txt  test_main.cpp
ext/event/: client.js  index.js  manifest.json
ext/identity/: client.js  index.js  manifest.json
ext/invoke/: client.js  index.js  invocationEvents.js  manifest.json
ext/invoked/: client.js  index.js  invocationEvents.js  manifest.json
ext/io/: client.js  index.js  manifest.json
ext/io.filetransfer/: client.js  index.js  manifest.json
ext/io.filetransfer/native/unitTests/: CMakeLists.txt  test_main.cpp
ext/jpps/: manifest.json
ext/json/: manifest.json
ext/marker/: library.xml
ext/notification/: client.js  index.js  manifest.json
ext/payment/: client.js  index.js  manifest.json
ext/pim.calendar/: Attendee.js  CalendarAccount.js  CalendarError.js  CalendarEvent.js  CalendarEventFilter.js  CalendarFindOptions.js  CalendarFolder.js  CalendarRepeatRule.js  calendarUtils.js  client.js  index.js  manifest.json
ext/pim.contacts/: Contact.js  ContactAccount.js  ContactError.js  ContactFindOptions.js  ContactName.js  ContactPickerOptions.js  client.js  contactUtils.js  index.js  manifest.json
ext/pim.contacts/native/unitTests/: CMakeLists.txt  test_main.cpp
ext/push/: client.js  index.js  manifest.json
ext/push/native/unitTests/: CMakeLists.txt
ext/sensors/: client.js  index.js  manifest.json  sensorsEvents.js  sensorsJNEXT.js
ext/system/: client.js  index.js  manifest.json  systemEvents.js
ext/tissue/: library.xml
ext/ui.contextmenu/: actions.js  client.js  index.js  manifest.json
ext/ui.cover/: client.js  index.js  manifest.json
ext/ui.dialog/: client.js  index.js  manifest.json
ext/ui.dialog/native/: CMakeLists.txt  common.mk  dialog_bps.cpp  dialog_bps.hpp  dialog_js.cpp
ext/ui.toast/: client.js  index.js  manifest.json
ext/user.identity/: IDSJNEXT.js  client.js  index.js  manifest.json
ext/user.identity/native/: CMakeLists.txt  ids_js.cpp  ids_js.hpp
ext/utils/: manifest.json
lib/: clientWebView.js  config.js  controllerWebView.js  event.js  exception.js  framework.js  handler.js  jnext.js  main.js  message.js  overlayWebView.js  permissions.js  request.js  rotationHelper.js  server.js  utils.js  webkitEvent.js  webview.js  webviewShim.js
lib/config/: Config.js  ConfigConstants.js  CustomData.js  Globals.js  TransitionConstants.js  config.js  default.js  libraries.js  user.js
lib/plugins/: bridge.js  default.js  example.js  extensions.js
lib/policy/: featureManager.js  folderAccess.js  webkitOriginAccess.js  whitelist.js
lib/pps/: ppsEvents.js  ppsNetwork.js  ppsUtils.js
lib/public/: builder.js  event.js  index.html  testbed.html  testbed_event.html  webworks.js  window-webworks.js  window.js
test.functional/: blackberry.js
test/functional/: blackberry.app.js  blackberry.connection.js  blackberry.event.js  blackberry.identity.js  blackberry.invoke.js  blackberry.io.filetransfer.js  blackberry.js  blackberry.push.js  blackberry.system.js  blackberry.ui.dialog.js
test/test-app/: .bbwpignore  README.md  (+3 more)
ui-resources/: ui.html
(+417 files in other folders)
