cmake_minimum_required(VERSION 2.6)

set (CMAKE_INSTALL_PREFIX "/")

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-s")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-s")
endif ()

if ($ENV{UNIT_TESTS})
    if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86")
        add_subdirectory(ext/connection/native/unitTests)
        add_subdirectory(ext/io.filetransfer/native/unitTests)
        add_subdirectory(ext/push/native/unitTests)
    endif ()

    if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armle-v7")
        add_subdirectory(ext/connection/native/unitTests)
        add_subdirectory(ext/io.filetransfer/native/unitTests)
        add_subdirectory(ext/push/native/unitTests)
        add_subdirectory(ext/pim.contacts/native/unitTests)
    endif ()
else ()
    if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86")
        add_subdirectory(ext/bbm.platform/native)
        add_subdirectory(ext/connection/native)
        add_subdirectory(ext/io.filetransfer/native)
        add_subdirectory(ext/push/native)
        add_subdirectory(ext/ui.dialog/native)
    endif ()

    if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armle-v7")
        add_subdirectory(ext/pim.contacts/native)
        add_subdirectory(ext/bbm.platform/native)
        add_subdirectory(ext/connection/native)
        add_subdirectory(ext/io.filetransfer/native)
        add_subdirectory(ext/push/native)
        add_subdirectory(ext/ui.dialog/native)
    endif ()
endif ()
